Fixed textarea jump bug and added email to search and added banner to site updates

--- a/wondrous/static/css/partials/_base.scss
+++ b/wondrous/static/css/partials/_base.scss
@@ -300,3 +300,27 @@ ul {
     &:link {color: rgb(0,100,170);}
     &:visited {color: rgb(0,100,170);}
 }
+
+/* Information Banner */
+
+.information-banner {
+    position: relative;
+    margin: 60px 15px 10px;
+    padding: 8px;
+    text-align: center;
+    color: rgb(251,251,251);
+    font-size: 15px;
+    font-weight: 900;
+}
+
+.information-banner--general {
+    background-color: rgb(67,182,239);
+}
+
+.information-banner--alert {
+    background-color: rgb(247,147,20);
+}
+
+.information-banner--warn {
+    background-color: rgb(220,80,80);
+}
